--- a/src/Savvyio.Extensions.DapperExtensions/Savvyio.Extensions.DapperExtensions.csproj
+++ b/src/Savvyio.Extensions.DapperExtensions/Savvyio.Extensions.DapperExtensions.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DapperExtensions.StrongNameReference" Version="1.9.0" />
+    <PackageReference Include="DapperExtensions.StrongNameReference" />
   </ItemGroup>
 
   <ItemGroup>
