--- a/src/Savvyio.Extensions.Dapper/Savvyio.Extensions.Dapper.csproj
+++ b/src/Savvyio.Extensions.Dapper/Savvyio.Extensions.Dapper.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dapper.StrongName" Version="2.1.35" />
+    <PackageReference Include="Dapper.StrongName" />
   </ItemGroup>
 
   <ItemGroup>
