--- a/src/Savvyio.Extensions.EFCore.Domain/Savvyio.Extensions.EFCore.Domain.csproj
+++ b/src/Savvyio.Extensions.EFCore.Domain/Savvyio.Extensions.EFCore.Domain.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cuemon.Extensions.IO" Version="9.0.0-preview.10" />
+    <PackageReference Include="Cuemon.Extensions.IO" />
   </ItemGroup>
 
   <ItemGroup>
