--- a/src/Savvyio.Extensions.QueueStorage/Savvyio.Extensions.QueueStorage.csproj
+++ b/src/Savvyio.Extensions.QueueStorage/Savvyio.Extensions.QueueStorage.csproj
@@ -6,10 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Identity" Version="1.12.1" />
-    <PackageReference Include="Azure.Messaging.EventGrid" Version="4.26.0" />
-    <PackageReference Include="Azure.Storage.Queues" Version="12.20.0" />
-    <PackageReference Include="Cuemon.Extensions.IO" Version="9.0.0-preview.10" />
+    <PackageReference Include="Azure.Identity" />
+    <PackageReference Include="Azure.Messaging.EventGrid" />
+    <PackageReference Include="Azure.Storage.Queues" />
+    <PackageReference Include="Cuemon.Extensions.IO" />
   </ItemGroup>
 
   <ItemGroup>
