--- a/test/Savvyio.EventDriven.Tests/Savvyio.EventDriven.Tests.csproj
+++ b/test/Savvyio.EventDriven.Tests/Savvyio.EventDriven.Tests.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cuemon.Extensions.IO" Version="9.0.0-preview.10" />
-    <PackageReference Include="Xunit.Priority" Version="1.1.6" />
+    <PackageReference Include="Cuemon.Extensions.IO" />
+    <PackageReference Include="Xunit.Priority" />
   </ItemGroup>
 
   <ItemGroup>
