--- a/test/Savvyio.Extensions.DependencyInjection.DapperExtensions.Tests/Savvyio.Extensions.DependencyInjection.DapperExtensions.Tests.csproj
+++ b/test/Savvyio.Extensions.DependencyInjection.DapperExtensions.Tests/Savvyio.Extensions.DependencyInjection.DapperExtensions.Tests.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.0-rc.1.24451.1" />
+    <PackageReference Include="Microsoft.Data.Sqlite" />
   </ItemGroup>
 
   <ItemGroup>
