--- a/test/Savvyio.Extensions.Newtonsoft.Json.Tests/Savvyio.Extensions.Newtonsoft.Json.Tests.csproj
+++ b/test/Savvyio.Extensions.Newtonsoft.Json.Tests/Savvyio.Extensions.Newtonsoft.Json.Tests.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cuemon.Extensions.IO" Version="9.0.0-preview.10" />
-    <PackageReference Include="System.Linq.Async" Version="6.0.1" />
+    <PackageReference Include="Cuemon.Extensions.IO" />
+    <PackageReference Include="System.Linq.Async" />
   </ItemGroup>
 
   <ItemGroup>
