--- a/test/Savvyio.Extensions.QueueStorage.FunctionalTests/Savvyio.Extensions.QueueStorage.FunctionalTests.csproj
+++ b/test/Savvyio.Extensions.QueueStorage.FunctionalTests/Savvyio.Extensions.QueueStorage.FunctionalTests.csproj
@@ -6,8 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xunit.Priority" Version="1.1.6" />
-    <PackageReference Include="System.Linq.Async" Version="6.0.1" />
+    <PackageReference Include="Xunit.Priority" />
+    <PackageReference Include="System.Linq.Async" />
   </ItemGroup>
 
   <ItemGroup>
