--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -4,13 +4,13 @@
     <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
   </PropertyGroup>
   <ItemGroup>
-    <PackageVersion Include="AWSSDK.SQS" Version="4.0.0.4" />
-    <PackageVersion Include="AWSSDK.SimpleNotificationService" Version="4.0.0.4" />
+    <PackageVersion Include="AWSSDK.SQS" Version="4.0.0.6" />
+    <PackageVersion Include="AWSSDK.SimpleNotificationService" Version="4.0.0.5" />
     <PackageVersion Include="Azure.Identity" Version="1.14.0" />
     <PackageVersion Include="Azure.Messaging.EventGrid" Version="4.31.0" />
     <PackageVersion Include="Azure.Storage.Queues" Version="12.22.0" />
     <PackageVersion Include="Codebelt.Extensions.Newtonsoft.Json" Version="9.0.3" />
-    <PackageVersion Include="Codebelt.Extensions.Xunit.App" Version="10.0.1" />
+    <PackageVersion Include="Codebelt.Extensions.Xunit.App" Version="10.0.2" />
     <PackageVersion Include="Codebelt.Extensions.YamlDotNet" Version="9.0.3" />
     <PackageVersion Include="Cuemon.Extensions.Collections.Generic" Version="9.0.5" />
     <PackageVersion Include="Cuemon.Extensions.Core" Version="9.0.5" />
@@ -22,9 +22,10 @@
     <PackageVersion Include="Dapper.StrongName" Version="2.1.66" />
     <PackageVersion Include="DapperExtensions.StrongNameReference" Version="1.10.0" />
     <PackageVersion Include="Microsoft.Data.Sqlite" Version="9.0.5" />
-    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.14.0" />
-    <PackageVersion Include="Microsoft.TestPlatform.ObjectModel" Version="17.14.0" />
+    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
+    <PackageVersion Include="Microsoft.TestPlatform.ObjectModel" Version="17.14.1" />
     <PackageVersion Include="MinVer" Version="6.0.0" />
+    <PackageVersion Include="RabbitMQ.Client" Version="7.1.2" />
     <PackageVersion Include="System.Linq.Async" Version="6.0.1" />
     <PackageVersion Include="System.Text.RegularExpressions" Version="4.3.1" />
     <PackageVersion Include="Xunit.Priority" Version="1.1.6" />
@@ -32,7 +33,7 @@
     <PackageVersion Include="coverlet.msbuild" Version="6.0.4" />
     <PackageVersion Include="xunit" Version="2.9.3" />
     <PackageVersion Include="xunit.runner.console" Version="2.9.3" />
-    <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.0" />
+    <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.1" />
   </ItemGroup>
   <ItemGroup Condition="$(TargetFramework.StartsWith('net9'))">
     <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
