--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -40,6 +40,7 @@ jobs:
             !test/**/Savvyio.FunctionalTests.csproj
             !test/**/Savvyio.Extensions.SimpleQueueService.FunctionalTests.csproj
             !test/**/Savvyio.Extensions.QueueStorage.FunctionalTests.csproj
+            !test/**/Savvyio.Extensions.RabbitMQ.FunctionalTests.csproj
   
       - name: JSON output
         run: echo "${{ steps.test-projects.outputs.result }}"
@@ -49,7 +50,7 @@ jobs:
     strategy:
       matrix:
         configuration: [Debug, Release]
-    uses: codebeltnet/jobs-dotnet-build/.github/workflows/default.yml@v1
+    uses: codebeltnet/jobs-dotnet-build/.github/workflows/default.yml@v2
     with:
       configuration: ${{ matrix.configuration }}
       strong-name-key-filename: savvyio.snk
@@ -61,7 +62,7 @@ jobs:
     strategy:
       matrix:
         configuration: [Debug, Release]
-    uses: codebeltnet/jobs-dotnet-pack/.github/workflows/default.yml@v1
+    uses: codebeltnet/jobs-dotnet-pack/.github/workflows/default.yml@v2
     with:
       configuration: ${{ matrix.configuration }}
       upload-packed-artifact: true
@@ -76,7 +77,7 @@ jobs:
         os: [ubuntu-24.04, windows-2022]
         configuration: [Debug, Release]
         project: ${{ fromJson(needs.prepare_test.outputs.json) }}
-    uses: codebeltnet/jobs-dotnet-test/.github/workflows/default.yml@v1
+    uses: codebeltnet/jobs-dotnet-test/.github/workflows/default.yml@v2
     with:
       runs-on: ${{ matrix.os }}
       configuration: ${{ matrix.configuration }}
@@ -84,7 +85,7 @@ jobs:
       build-switches: -p:SkipSignAssembly=true
 
   integration_test:
-    name: 🧪 Test
+    name: ⚗️ Integration Test - Azure and AWS
     needs: [build]
     strategy:
       fail-fast: false
@@ -104,11 +105,11 @@ jobs:
         uses: codebeltnet/dotnet-tool-install-reportgenerator@v1
 
       - name: Test with ${{ matrix.configuration }} build
-        uses: codebeltnet/dotnet-test@v3
+        uses: codebeltnet/dotnet-test@v4
         with:
           projects: ${{ matrix.project }}
           configuration: ${{ matrix.configuration }}
-          buildSwitches: -p:SkipSignAssembly=true
+          build-switches: -p:SkipSignAssembly=true
           level: normal
         env:
           AWS__CALLERIDENTITY: ${{ secrets.AWS_CALLER_IDENTITY }}
@@ -124,6 +125,35 @@ jobs:
           AZURE__EVENTGRID__WINDOWS__RELEASE__KEY: ${{ secrets.AZURE_EVENTGRID_WINDOWS_RELEASE_KEY }}
           AZURE__EVENTGRID__LINUX__DEBUG__KEY: ${{ secrets.AZURE_EVENTGRID_LINUX_DEBUG_KEY }}
           AZURE__EVENTGRID__LINUX__RELEASE__KEY: ${{ secrets.AZURE_EVENTGRID_LINUX_RELEASE_KEY }}
+
+  integration_test_rabbitmq:
+    name: ⚗️ Integration Test - RabbitMQ
+    needs: [build]
+    runs-on: ubuntu-24.04
+    timeout-minutes: 15
+    steps:
+      - name: Checkout
+        uses: codebeltnet/git-checkout@v1
+
+      - name: Install .NET
+        uses: codebeltnet/install-dotnet@v2
+
+      - name: Install .NET Tool - Report Generator
+        uses: codebeltnet/dotnet-tool-install-reportgenerator@v1
+
+      - name: Spin up RabbitMQ test dependency
+        run: |
+          docker run -d --name rabbitmq -p 5672:5672 -p 15672:15672 rabbitmq:management
+
+      - name: Test with Release build
+        uses: codebeltnet/dotnet-test@v4
+        with:
+          projects: test/**/Savvyio.Extensions.RabbitMQ.FunctionalTests.csproj
+
+      - name: Stop RabbitMQ
+        run: |
+          docker stop --name rabbitmq
+          docker rm --name rabbitmq
 
   sonarcloud:
     name: call-sonarcloud
