--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -148,6 +148,7 @@ jobs:
         uses: codebeltnet/dotnet-test@v4
         with:
           projects: test/**/Savvyio.Extensions.RabbitMQ.FunctionalTests.csproj
+          build-switches: -p:SkipSignAssembly=true
 
       - name: Stop RabbitMQ
         run: |
