--- a/src/Savvyio.Extensions.DependencyInjection.NATS/Savvyio.Extensions.DependencyInjection.NATS.csproj
+++ b/src/Savvyio.Extensions.DependencyInjection.NATS/Savvyio.Extensions.DependencyInjection.NATS.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Description>Extend the Savvy I/O support for Microsoft Dependency Injection with NATS JetStream and NATS Publish-Subscribe implementations.</Description>
+    <Description>Extend the Savvy I/O support for Microsoft Dependency Injection with NATS Work-Queue Stream and NATS Core Publish-Subscribe implementations.</Description>
     <PackageTags>nats jetstream publish subscribe bus di depedency-injection</PackageTags>
   </PropertyGroup>
 
