:white_check_mark: complementary unit tests for NATS

--- a/test/Savvyio.Extensions.NATS.Tests/Savvyio.Extensions.NATS.Tests.csproj
+++ b/test/Savvyio.Extensions.NATS.Tests/Savvyio.Extensions.NATS.Tests.csproj
@@ -5,11 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="EventDriven\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\..\src\Savvyio.Extensions.NATS\Savvyio.Extensions.NATS.csproj" />
+    <ProjectReference Include="..\..\src\Savvyio.Extensions.Text.Json\Savvyio.Extensions.Text.Json.csproj" />
   </ItemGroup>
 
 </Project>
