:white_check_mark: complementary unit test for NATS-, Azure-, RabbitMQ- and AWS- related implementations

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -25,6 +25,7 @@
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
     <PackageVersion Include="Microsoft.TestPlatform.ObjectModel" Version="17.14.1" />
     <PackageVersion Include="MinVer" Version="6.0.0" />
+    <PackageVersion Include="Moq" Version="4.20.72" />
     <PackageVersion Include="NATS.Client.Core" Version="2.6.7" />
     <PackageVersion Include="NATS.Client.JetStream" Version="2.6.7" />
     <PackageVersion Include="NATS.Client.Simplified" Version="2.6.7" />
