--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -111,6 +111,7 @@ jobs:
           projects: ${{ matrix.project }}
           configuration: ${{ matrix.configuration }}
           build-switches: -p:SkipSignAssembly=true
+          restore: true
           build: true
         env:
           AWS__CALLERIDENTITY: ${{ secrets.AWS_CALLER_IDENTITY }}
@@ -151,6 +152,7 @@ jobs:
         with:
           projects: test/**/Savvyio.Extensions.RabbitMQ.FunctionalTests.csproj
           build-switches: -p:SkipSignAssembly=true
+          restore: true
           build: true
 
       - name: Stop RabbitMQ
@@ -182,6 +184,7 @@ jobs:
         with:
           projects: test/**/Savvyio.Extensions.NATS.FunctionalTests.csproj
           build-switches: -p:SkipSignAssembly=true
+          restore: true
           build: true
 
       - name: Stop NATS
