--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -4,51 +4,50 @@
     <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
   </PropertyGroup>
   <ItemGroup>
-    <PackageVersion Include="AWSSDK.SQS" Version="4.0.1.11" />
-    <PackageVersion Include="AWSSDK.SimpleNotificationService" Version="4.0.1.9" />
+    <PackageVersion Include="AWSSDK.SQS" Version="4.0.2.3" />
+    <PackageVersion Include="AWSSDK.SimpleNotificationService" Version="4.0.2.5" />
     <PackageVersion Include="Azure.Identity" Version="1.17.0" />
     <PackageVersion Include="Azure.Messaging.EventGrid" Version="5.0.0" />
     <PackageVersion Include="Azure.Storage.Queues" Version="12.24.0" />
-    <PackageVersion Include="Codebelt.Extensions.Newtonsoft.Json" Version="9.0.8" />
-    <PackageVersion Include="Codebelt.Extensions.Xunit.App" Version="10.0.7" />
-    <PackageVersion Include="Codebelt.Extensions.YamlDotNet" Version="9.0.8" />
-    <PackageVersion Include="Cuemon.Extensions.Collections.Generic" Version="9.0.10" />
-    <PackageVersion Include="Cuemon.Extensions.Core" Version="9.0.10" />
-    <PackageVersion Include="Cuemon.Extensions.DependencyInjection" Version="9.0.10" />
-    <PackageVersion Include="Cuemon.Extensions.IO" Version="9.0.10" />
-    <PackageVersion Include="Cuemon.Extensions.Reflection" Version="9.0.10" />
-    <PackageVersion Include="Cuemon.Extensions.Text.Json" Version="9.0.10" />
-    <PackageVersion Include="Cuemon.Security.Cryptography" Version="9.0.10" />
+    <PackageVersion Include="Codebelt.Extensions.Newtonsoft.Json" Version="10.0.0" />
+    <PackageVersion Include="Codebelt.Extensions.Xunit.App" Version="11.0.0" />
+    <PackageVersion Include="Codebelt.Extensions.YamlDotNet" Version="10.0.0" />
+    <PackageVersion Include="Cuemon.Extensions.Collections.Generic" Version="10.0.0" />
+    <PackageVersion Include="Cuemon.Extensions.Core" Version="10.0.0" />
+    <PackageVersion Include="Cuemon.Extensions.DependencyInjection" Version="10.0.0" />
+    <PackageVersion Include="Cuemon.Extensions.IO" Version="10.0.0" />
+    <PackageVersion Include="Cuemon.Extensions.Reflection" Version="10.0.0" />
+    <PackageVersion Include="Cuemon.Extensions.Text.Json" Version="10.0.0" />
+    <PackageVersion Include="Cuemon.Security.Cryptography" Version="10.0.0" />
     <PackageVersion Include="Dapper.StrongName" Version="2.1.66" />
     <PackageVersion Include="DapperExtensions.StrongNameReference" Version="1.10.0" />
-    <PackageVersion Include="Microsoft.Data.Sqlite" Version="9.0.10" />
-    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
+    <PackageVersion Include="Microsoft.Data.Sqlite" Version="10.0.0" />
+    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
     <PackageVersion Include="MinVer" Version="6.0.0" />
     <PackageVersion Include="Moq" Version="4.20.72" />
     <PackageVersion Include="NATS.Client.Core" Version="2.6.11" />
     <PackageVersion Include="NATS.Client.JetStream" Version="2.6.11" />
     <PackageVersion Include="NATS.Client.Simplified" Version="2.6.11" />
-    <PackageVersion Include="RabbitMQ.Client" Version="7.1.2" />
-    <PackageVersion Include="System.Linq.Async" Version="6.0.3" />
+    <PackageVersion Include="RabbitMQ.Client" Version="7.2.0" />
     <PackageVersion Include="System.Text.RegularExpressions" Version="4.3.1" />
-    <PackageVersion Include="Xunit.Priority" Version="1.1.6" />
+    <PackageVersion Include="Xunit.v3.Priority" Version="1.1.18" />
     <PackageVersion Include="coverlet.collector" Version="6.0.4" />
     <PackageVersion Include="coverlet.msbuild" Version="6.0.4" />
-    <PackageVersion Include="xunit" Version="2.9.3" />
-    <PackageVersion Include="xunit.runner.console" Version="2.9.3" />
+    <PackageVersion Include="xunit.v3" Version="3.2.0" />
+    <PackageVersion Include="xunit.v3.runner.console" Version="3.2.0" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.5" />
   </ItemGroup>
   <ItemGroup Condition="$(TargetFramework.StartsWith('net9'))">
-    <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.10" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.10" />
-    <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.10" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.11" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.11" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.11" />
+    <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.11" />
+    <PackageVersion Include="System.Linq.Async" Version="6.0.3" />
   </ItemGroup>
-  <ItemGroup Condition="$(TargetFramework.StartsWith('net8'))">
-    <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="8.0.21" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.21" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.21" />
-    <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.3" />
-    <PackageVersion Include="Microsoft.Extensions.Caching.Memory" Version="8.0.1" />
+  <ItemGroup Condition="$(TargetFramework.StartsWith('net10'))">
+    <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="10.0.0" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="10.0.0" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Relational" Version="10.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.0" />
   </ItemGroup>
 </Project>
